@@ -72,10 +72,11 @@ public final class DiagnosticsHandler {
             DumbService.getInstance(module.getProject()).runReadActionInSmartMode(() -> {
                 // Collect all adapted diagnostic definitions
                 JavaDiagnosticsContext context = new JavaDiagnosticsContext(uri, typeRoot, utils, module, documentFormat, settings);
-                List<JavaDiagnosticsDefinition> definitions = JavaDiagnosticsDefinition.EP_NAME.getExtensionList().stream()
+                List<JavaDiagnosticsDefinition> definitions = JavaDiagnosticsDefinition.EP_NAME.getExtensionList()
+                        .stream()
                         .filter(definition -> group.equals(definition.getGroup()))
                         .filter(definition -> definition.isAdaptedForDiagnostics(context))
-                        .collect(Collectors.toList());
+                        .toList();
                 if (definitions.isEmpty()) {
                     return;
                 }
